Fix for not showing the correct cursor/ pointer in pagination links.

--- a/eclipse/plugins/org.openntf.xsp.bootstrap/resources/web/extlib/bootstrap/xpages231.css
+++ b/eclipse/plugins/org.openntf.xsp.bootstrap/resources/web/extlib/bootstrap/xpages231.css
@@ -139,6 +139,10 @@
 	border: 0;
 }
 
+/*Bootstrap relies on the href attribute on a's to show the correct cursos: fix for XPage pagination that by default doesn't have that*/
+.nav, .pagination, .carousel a {
+	cursor: pointer;
+}
 
 /***********************************************************************	
 	OneUI like specific styles used by XPages controls
